--- a/.conkyrc
+++ b/.conkyrc
@@ -1,46 +1,18 @@
-# Downloaded from 
-# https://github.com/rgoomar/i3-wm-config/blob/master/.conkyrc
-out_to_x no
-own_window no
-out_to_console yes
-background no
-max_text_width 0
+background        no
+out_to_console 	  yes
+out_to_x	  no
+update_interval	  2
+total_run_times	  0
+short_units	  yes
+pad_percents	  3
 
-# Update interval in seconds
-update_interval 1.0
+override_utf8_locale yes
 
-# This is the number of times Conky will update before quitting.
-# Set to zero to run forever.
-total_run_times 0
-
-# Shortens units to a single character (kiB->k, GiB->G, etc.). Default is off.
-short_units yes
-
-# How strict should if_up be when testing an interface for being up?
-# The value is one of up, link or address, to check for the interface
-# being solely up, being up and having link or being up, having link
-# and an assigned IP address. 
-if_up_strictness address
-
-# Add spaces to keep things from moving about?  This only affects certain objects.
-# use_spacer should have an argument of left, right, or none
-use_spacer left
-
-# Force UTF8? note that UTF8 support required XFT
-override_utf8_locale no
-
-# number of cpu samples to average
-# set to 1 to disable averaging
-cpu_avg_samples 2
-
-# Stuff after 'TEXT' will be formatted on screen
 TEXT
 
-# Gmail: ${execi 60 perl ./imap.pl} \
-# IIT: ${execi 60 perl ./imap2.pl} | \
 CPU: ${cpu}% | \
 RAM: ${mem} / ${memmax} - ${memperc}% | \
 Bat: ${battery_short BAT1} | \
-${time %G %D %T} | \
+${time %F %T} | \
 ${execi 60 ./weather.sh 60532} | \
 Vol: ${exec amixer -c 0 get Master | awk '/\[*%\]/ {print $4}'}
