--- a/config
+++ b/config
@@ -165,9 +165,10 @@ bindsym $mod+Shift+E exit
 # resize window (you can also use the mouse for that)
 mode "resize" {
         bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt # same bindings, but for the arrow keys
+        bindsym i resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt 
+        # same bindings, but for the arrow keys
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
